<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bro</string>
    <string name="action_settings">Settings</string>
    <string name="edit_username">username</string>
    <string name="edit_password">password</string>
    <string name="button_login">Login</string>
    <string name="logo_description">Bro-Logo</string>

    <!-- Input Activity -->
    <string name="title_activity_input">Start your Bromance</string>
    <string name="hello_world">Hello world!</string>
    <string name="std_category">Categories</string>
    <string name="more">+</string>

    <string-array name="categories">
        <item>All</item>
        <item>Swinger Orgy</item>
        <item>SM Party</item>
    </string-array>

    <string name="title_activity_show_friend">ShowFriendActivity</string>
    <string name="title_activity_friendlist">FriendlistActivity</string>

</resources>