<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo_400x400px" />

    <EditText
        android:id="@+id/edit_username"
        android:textColor="#ffffff"
        android:textColorHint="#efefef"
        android:layout_width="fill_parent"
        android:layout_height="12sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:inputType="textEmailAddress"
        android:hint="@string/edit_username" />

    <EditText
        android:textColor="#ffffff"
        android:textColorHint="#efefef"
        android:id="@+id/edit_password"
        android:layout_width="fill_parent"
        android:layout_height="12sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:hint="@string/edit_password"
        android:inputType="textPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="#4F86F7"
        android:layout_weight="1"
        android:text="@string/button_login" 
        android:onClick="login"/>

</LinearLayout>