<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:layout_alignParentBottom="true"
    
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InputActivity" >

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:entries="@array/categories"
        
        android:prompt="@string/std_category" />
    
    
     <Button
        android:id="@+id/time"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinner1"
        android:background="#0000"
        android:text="Now" />

    <ImageView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/time"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/sample_map" />

    <LinearLayout
        android:id="@+id/profiles"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/map" >

        <ImageView
            android:id="@+id/profilimage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/head_icon" />

        <ImageView
            android:id="@+id/profilimage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/head_icon" />

        <ImageView
            android:id="@+id/profilimage3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/head_icon" />

        <ImageView
            android:id="@+id/profilimage4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/head_icon" />

        <ImageView
            android:id="@+id/profilimage5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/head_icon" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:text="@string/more"
            android:textSize="40sp" />
    </LinearLayout>

   

</RelativeLayout>